--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,6 +15,6 @@
   </servlet>
   <servlet-mapping>
   	<servlet-name>UserServlet</servlet-name>
-  	<url-pattern>/User</url-pattern>
+  	<url-pattern>/user</url-pattern>
   </servlet-mapping>
 </web-app>
